# CPPAssignment2

./: .gitignore  CMakeLists.txt  main.cpp
src/: Application.cpp  Application.h  Creator.cpp  Creator.h  Person.cpp  Person.h  User.cpp  User.h  Utility.cpp  Utility.h  YoutubeAlgorithm.h
ytdata/: users.txt
